# ============================================================================
# Setup Configuration for AG News Text Classification
# ============================================================================
# Project: AG News Text Classification (ag-news-text-classification)
# Description: Declarative configuration complementing setup.py
# Author: Võ Hải Dũng
# Email: vohaidung.work@gmail.com
# License: MIT
# Python: >=3.8,<3.12
# ============================================================================
#
# This configuration file provides setuptools with declarative metadata
# and tool configurations. It works in conjunction with setup.py for
# backward compatibility and enhanced flexibility.
#
# Structure:
#   - [metadata]: Package metadata and classifiers
#   - [options]: Package discovery and dependencies
#   - [options.extras_require]: Optional dependency groups
#   - [options.entry_points]: Command-line interface definitions
#   - [tool:*]: Tool-specific configurations
#
# References:
#   - PEP 621: Storing project metadata in pyproject.toml
#   - https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# ============================================================================

[metadata]
name = ag-news-text-classification
version = attr: src.__version__.__version__
author = Võ Hải Dũng
author_email = vohaidung.work@gmail.com
description = State-of-the-art text classification framework for AG News dataset with comprehensive overfitting prevention
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VoHaiDung/ag-news-text-classification
project_urls =
    Bug Reports = https://github.com/VoHaiDung/ag-news-text-classification/issues
    Documentation = https://github.com/VoHaiDung/ag-news-text-classification#readme
    Source Code = https://github.com/VoHaiDung/ag-news-text-classification
    Changelog = https://github.com/VoHaiDung/ag-news-text-classification/blob/main/CHANGELOG.md
license = MIT
license_files = LICENSE
keywords =
    text-classification
    nlp
    transformers
    deep-learning
    pytorch
    ag-news
    lora
    qlora
    ensemble-learning
    overfitting-prevention
    llm
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: GPU :: NVIDIA CUDA
    Framework :: Jupyter
    Typing :: Typed

[options]
python_requires = >=3.8,<3.12
install_requires =
    torch>=2.1.0,<2.3.0
    transformers>=4.36.0,<4.41.0
    tokenizers>=0.15.0,<0.16.0
    datasets>=2.16.0,<2.20.0
    accelerate>=0.25.0,<0.31.0
    safetensors>=0.4.0,<0.5.0
    numpy>=1.24.0,<1.27.0
    pandas>=2.0.0,<2.3.0
    sciscikit-learn>=1.3.0,<1.5.0
    pyyaml>=6.0.1,<7.0.0
    python-dotenv>=1.0.0,<1.1.0
    pydantic>=2.5.0,<2.8.0
    tqdm>=4.66.0,<4.67.0
    requests>=2.31.0,<2.33.0
    loguru>=0.7.0,<0.8.0
    rich>=13.7.0,<13.8.0
    click>=8.1.7,<8.2.0
    omegaconf>=2.3.0,<2.4.0
    typer[all]>=0.9.0,<0.13.0
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests
    tests.*
    *.tests
    *.tests.*
    experiments
    experiments.*
    *.experiments
    *.experiments.*

[options.package_data]
* =
    *.yaml
    *.yml
    *.json
    *.txt
    *.md
    *.cfg
    *.ini

[options.extras_require]
ml =
    peft>=0.7.0,<0.12.0
    bitsandbytes>=0.41.0,<0.44.0
    nltk>=3.8.0,<3.9.0
    sentencepiece>=0.1.99,<0.3.0
    protobuf>=3.20.0,<4.26.0
    xgboost>=2.0.0,<2.1.0
    lightgbm>=4.1.0,<4.4.0
    catboost>=1.2.0,<1.3.0
    optuna>=3.5.0,<3.7.0
    wandb>=0.16.0,<0.17.0
    tensorboard>=2.15.0,<2.17.0
    mlflow>=2.9.0,<2.15.0

llm =
    tiktoken>=0.5.0,<0.8.0
    langchain>=0.1.0,<0.3.0
    sentence-transformers>=2.2.0,<3.1.0
    chromadb>=0.4.0,<0.5.0
    faiss-cpu>=1.7.4,<1.9.0

efficient =
    peft>=0.7.0,<0.12.0
    bitsandbytes>=0.41.0,<0.44.0
    optimum>=1.16.0,<1.21.0
    auto-gptq>=0.6.0,<0.8.0

data =
    beautifulsoup4>=4.12.0,<4.13.0
    lxml>=4.9.0,<5.3.0
    pyarrow>=14.0.0,<16.2.0
    h5py>=3.10.0,<3.12.0
    openpyxl>=3.1.0,<3.2.0
    nltk>=3.8.0,<3.9.0

ui =
    streamlit>=1.30.0,<1.37.0
    gradio>=4.12.0,<4.38.0
    plotly>=5.18.0,<5.23.0
    matplotlib>=3.8.0,<3.10.0
    seaborn>=0.13.0,<0.14.0

dev =
    pytest>=7.4.0,<8.3.0
    pytest-cov>=4.1.0,<5.1.0
    pytest-xdist>=3.5.0,<3.7.0
    pytest-mock>=3.12.0,<3.15.0
    pytest-timeout>=2.2.0,<2.4.0
    hypothesis>=6.92.0,<6.109.0
    black>=23.12.0,<24.5.0
    isort>=5.13.0,<5.14.0
    flake8>=7.0.0,<7.1.0
    mypy>=1.8.0,<1.11.0
    pylint>=3.0.3,<3.3.0
    pre-commit>=3.6.0,<3.8.0
    ruff>=0.1.14,<0.5.0

docs =
    sphinx>=7.2.0,<7.4.0
    sphinx-rtd-theme>=2.0.0,<2.1.0
    sphinx-autodoc-typehints>=1.25.0,<2.2.0
    myst-parser>=2.0.0,<3.1.0
    mkdocs>=1.5.0,<1.7.0
    mkdocs-material>=9.5.0,<9.6.0
    mkdocstrings[python]>=0.24.0,<0.26.0

research =
    optuna>=3.5.0,<3.7.0
    ray[tune]>=2.9.0,<2.10.0
    jupyter>=1.0.0,<1.1.0
    jupyterlab>=4.0.0,<4.3.0
    ipython>=8.12.0,<8.27.0
    ipywidgets>=8.1.0,<8.2.0
    nbconvert>=7.14.0,<7.17.0

robustness =
    textattack>=0.3.8,<0.4.0

local_prod =
    fastapi>=0.109.0,<0.112.0
    uvicorn[standard]>=0.27.0,<0.31.0
    gunicorn>=21.2.0,<23.0.0

local_monitoring =
    tensorboard>=2.15.0,<2.17.0
    mlflow>=2.9.0,<2.15.0

colab =
    google-colab>=1.0.0

kaggle =
    kaggle>=1.5.16,<1.7.0

all =
    peft>=0.7.0,<0.12.0
    bitsandbytes>=0.41.0,<0.44.0
    nltk>=3.8.0,<3.9.0
    sentencepiece>=0.1.99,<0.3.0
    xgboost>=2.0.0,<2.1.0
    lightgbm>=4.1.0,<4.4.0
    catboost>=1.2.0,<1.3.0
    optuna>=3.5.0,<3.7.0
    wandb>=0.16.0,<0.17.0
    tensorboard>=2.15.0,<2.17.0
    mlflow>=2.9.0,<2.15.0
    tiktoken>=0.5.0,<0.8.0
    langchain>=0.1.0,<0.3.0
    streamlit>=1.30.0,<1.37.0
    gradio>=4.12.0,<4.38.0
    plotly>=5.18.0,<5.23.0
    fastapi>=0.109.0,<0.112.0
    uvicorn[standard]>=0.27.0,<0.31.0
    jupyter>=1.0.0,<1.1.0
    jupyterlab>=4.0.0,<4.3.0

[options.entry_points]
console_scripts =
    ag-news = src.cli:main
    ag-news-health = src.core.health.health_checker:main
    ag-news-train = src.cli:train_command
    ag-news-evaluate = src.cli:evaluate_command
    ag-news-setup = quickstart.setup_wizard:main
    ag-news-config = tools.config_tools.config_generator:main

# ============================================================================
# Build Distribution Configuration
# ============================================================================

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

# ============================================================================
# Testing Configuration (pytest)
# ============================================================================

[tool:pytest]
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
addopts =
    -v
    --strict-markers
    --strict-config
    --tb=short
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --cov-branch
markers =
    unit: Unit tests for individual components
    integration: Integration tests for component interaction
    e2e: End-to-end tests for complete workflows
    slow: Tests with long execution time
    gpu: Tests requiring GPU hardware
    smoke: Quick smoke tests for basic functionality
    regression: Regression tests for previously fixed bugs
    performance: Performance benchmarking tests
    platform: Platform-specific tests (Colab, Kaggle, Local)
filterwarnings =
    error
    ignore::UserWarning
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

# ============================================================================
# Coverage Configuration
# ============================================================================

[coverage:run]
source = src
omit =
    */tests/*
    */test_*.py
    */__pycache__/*
    */site-packages/*
    */.venv/*
    */venv/*
    */experiments/*
branch = True
parallel = True

[coverage:report]
precision = 2
show_missing = True
skip_covered = False
exclude_lines =
    pragma: no cover
    def __repr__
    def __str__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    if typing.TYPE_CHECKING:
    @abstractmethod
    @abc.abstractmethod

[coverage:html]
directory = htmlcov

[coverage:xml]
output = coverage.xml

# ============================================================================
# Code Quality Configuration (flake8)
# ============================================================================

[flake8]
max-line-length = 100
extend-ignore = E203, E501, W503, E402
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .tox,
    .venv,
    venv,
    experiments,
    notebooks,
    .ipynb_checkpoints,
    deployment,
    app,
    monitoring,
    security,
    plugins,
    cache,
    backup,
    quickstart,
    templates,
    scripts,
    prompts,
    migrations,
    tools
per-file-ignores =
    __init__.py:F401,F403
    src/__version__.py:F401
max-complexity = 15
doctests = True

# ============================================================================
# Type Checking Configuration (mypy)
# ============================================================================

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = False
warn_no_return = True
warn_unreachable = True
strict_optional = True
strict_equality = True
disallow_untyped_defs = False
disallow_any_generics = False
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
show_column_numbers = True
pretty = True
files = src

[mypy-tests.*]
ignore_errors = True

[mypy-experiments.*]
ignore_errors = True

[mypy-notebooks.*]
ignore_errors = True

# ============================================================================
# Code Formatting Configuration (black)
# ============================================================================

[tool:black]
line-length = 100
target-version = py310
include = \.pyi?$
extend-exclude = /(\.git|\.venv|venv|build|dist|experiments|notebooks)/

# ============================================================================
# Import Sorting Configuration (isort)
# ============================================================================

[tool:isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip_gitignore = True
skip =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv,
    experiments,
    notebooks
known_first_party = src
sections =
    FUTURE,
    STDLIB,
    THIRDPARTY,
    FIRSTPARTY,
    LOCALFOLDER

# ============================================================================
# Linting Configuration (pylint)
# ============================================================================

[pylint.main]
max-line-length = 100
disable =
    C0111,
    C0103,
    R0913,
    R0914,
    W0212,
    R0903,
    R0902
good-names = i,j,k,ex,Run,_,id,lr,e
ignore = 
    tests,
    experiments,
    notebooks,
    deployment,
    monitoring,
    scripts

[pylint.format]
max-line-length = 100

[pylint.messages_control]
disable =
    missing-docstring,
    invalid-name,
    too-many-arguments,
    too-many-locals,
    protected-access,
    too-few-public-methods,
    too-many-instance-attributes

# ============================================================================
# Additional Metadata
# ============================================================================

[egg_info]
tag_build =
tag_date = 0
